--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "mi-primera-web",
+  "homepage": "./",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,12 +14,14 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
+  
+    "scripts": {
+      "start": "react-scripts start",
+      "build": "react-scripts build",
+      "githubpages": "rm -rf build && rm -rf docs && npm run build && mv build docs && git add docs/* && git commit -m \"Publish in GitHub Pages\" && git push"
+    },
+  
+
   "eslintConfig": {
     "extends": [
       "react-app",
